# energy-data

./: .env.example  .gitignore  .prettierrc.json  README.md  docker-compose.yml  sonar-project.properties
.github/: dependabot.yml  renovate.json
.github/workflows/: client-build.yml  client-deploy.yml  client-test.yml  client_deploy.yml  client_test.yml  clienttest.yml  codeql.yml  lighthouse.yml  playwright.yml  scan.yml  scout.yml  server-build.yml  server-deploy.yml  server-test.yml  server_deploy.yml  server_test.yml  sonar.yml  terraform.yml
client/: .dockerignore  .eslintcache  .npmrc  Dockerfile  check-packages.js  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
client/config/: eslint.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
client/nginx/: nginx.conf
client/src/: App.vue  constants.ts  (+5 more)
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/src/: cache.py  energy_client.py  exception_handlers.py  main.py  price_client.py  setup_logger.py
server/src/clients/: energy_client.py  price_client.py
server/src/common/: cache.py  exception_handlers.py
server/src/enums/: dataset.py
server/src/middleware/: secure_headers.py
server/src/models/: energy.py  price.py
server/src/services/: energy_service.py  price_service.py
server/tests/: test_energy_client.py
server/tests/api/: test_endpoints.py
server/tests/unit/: test_energy.py  test_energy_client.py  test_price.py  test_price_client.py
terraform/: .checkov.yml  .terraform.lock.hcl  .tflint.hcl  client.tf  outputs.tf  provider.tf  repository.tf  requirements.txt  server.tf  variables.tf  versions.tf
utility/: Dockerfile  consumption.http  data.http  hydro.http  nuclear.http  production.http  requests.http  server.http  solar.http  wind.http
(+15 files in other folders)
