[project]
name = "energy-data-server"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "aiocache==0.12.3",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pip-audit==2.9.0",
    "python-dotenv==1.1.1",
    "ruff==0.12.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["COM812"]
exclude = [".venv", "__pycache__"]
