[project]
name = "energy-data-server"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "aiocache==0.12.3",
    "fastapi==0.125.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "slowapi==0.1.9",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pip-audit==2.10.0",
    "ruff==0.14.10",
    "taskipy==1.14.1",
]

[tool.taskipy.tasks]
api = "uv run --env-file ../.env python -m src.main"
test = "uv run --env-file ../.env python -m unittest discover -v -s tests"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["COM812"]
exclude = [".venv", "__pycache__"]
